--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" type="text/css" href="./css/common.css">
  <!-----link to Box Icons-->
  <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
-<title>Steve Construction Company</title>
+<title>Draft Quantifiers</title>
 </head>
 
 <body>
@@ -52,7 +52,7 @@
             <div class="secondHeadingLanding">
                 <h1>Who we are</h1>
                 <p>
-                    Draft Quantifiers Ltd is General Contractor and Construction Manager doing business in Kenya since 2022. Markets        currently served are private, commercial, corporate, healthcare, institutional, government and correctional facilities.
+                    Draft Quantifiers Ltd is General Contractor and Construction Manager doing business in Kenya since 2022. Markets currently served are private, commercial, corporate, healthcare, institutional, government and correctional facilities.
                 </p>
                 <button class="seeMoreBtn" onclick="document.location='about.html'">See more</button>
 
@@ -78,7 +78,7 @@
                     meet the needs of our diverse client base. <br>
                     ✓ We will conduct ourselves with uncompromising commitment to our core values. <br>
                     ✓ We will inspire and guide with positive leadership. <br>
-                    ✓ We will attract and retain the best talent by providing challenging opportunities, encouraging innovation and warding               accomplishments. <br>
+                    ✓ We will attract and retain the best talent by providing challenging opportunities, encouraging innovation and warding accomplishments. <br>
                     ✓ We will leverage our resources through value-added alliances, partnerships
                     and acquisitions to effectively provide the best solution. <br>
                     ✓ We will embrace promising technologies as a means to deliver added value
