--- a/projects.html
+++ b/projects.html
@@ -166,7 +166,7 @@
 
         <div class="footer">
             <p class="ccPara">
-                Website Developed by <a href="http://saelwebdesign.com">Sael Web Design</a>
+                Developed by <a href="https://saeldigitalagency.co.ke/">Sael Digital Agency</a>
             </p>
         </div>
 
