--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
     <!--Footer-->
     <div class="footer">
         <p class="ccPara">
-            Website Developed by <a href="http://saelwebdesign.com">Sael Web Design</a>
+           Developed by <a href="https://saeldigitalagency.co.ke/">Sael Digital Agency</a>
         </p>
     </div>
     
